# ChangeLog for net-irc/quassel
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/quassel/ChangeLog,v 1.192 2015/03/02 09:29:54 ago Exp $

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> quassel-0.10.0-r1.ebuild:
  Stable for ppc, wrt bug #516836

*quassel-0.12_beta1 (25 Feb 2015)

  25 Feb 2015; Patrick Lauer <patrick@gentoo.org> +quassel-0.12_beta1.ebuild:
  Bump for #541280

  22 Feb 2015; Michał Górny <mgorny@gentoo.org> quassel-0.10.0-r1.ebuild,
  quassel-0.10.1.ebuild, quassel-0.11.0.ebuild, quassel-0.9.2.ebuild,
  quassel-0.9.3.ebuild, quassel-9999.ebuild:
  Update dependency on QCA plugins to use USE flags on app-crypt/qca:2
  unconditionally, to provide a single sane path for dependency resolution. Bug
  #541066.

  16 Feb 2015; Johannes Huber <johu@gentoo.org> quassel-9999.ebuild:
  Update dependencies for Qt5 based kde support.

  15 Feb 2015; Johannes Huber <johu@gentoo.org> quassel-9999.ebuild:
  Update dependencies for Qt5 based kde support.

  11 Feb 2015; Johannes Huber <johu@gentoo.org> quassel-9999.ebuild:
  Restore crypt + kde for qt5 build.

  02 Feb 2015; Patrick Lauer <patrick@gentoo.org> files/quasselcore.conf:
  Fix typo in quasselcore.conf #538240

  29 Jan 2015; Johannes Huber <johu@gentoo.org> quassel-0.10.0-r1.ebuild,
  quassel-0.10.1.ebuild, quassel-0.11.0.ebuild, quassel-0.9.2.ebuild,
  quassel-0.9.3.ebuild, quassel-9999.ebuild:
  Adjust dependencies to handle merged plugins in >=app-crypt/qca-2.1, bug
  #537994.

  31 Dec 2014; Michael Palimaka <kensington@gentoo.org>
  quassel-0.10.0-r1.ebuild, quassel-0.10.1.ebuild, quassel-0.9.2.ebuild,
  quassel-0.9.3.ebuild:
  Enforce USE dependency for media-libs/phonon.

  31 Dec 2014; Michael Palimaka <kensington@gentoo.org> quassel-0.11.0.ebuild,
  quassel-9999.ebuild:
  Remove bogus USE dependency default for dev-libs/libdbusmenu-qt[qt5].

*quassel-0.10.1 (29 Dec 2014)
