@@ -9,32 +9,32 @@ AUX quasselcore.service 189 SHA256 33c71f621f69f2eb6a5c613b979238c085a1e1aef3ee1
 DIST quassel-0.10.0.tar.bz2 2873233 SHA256 68228ce23aa3a992add3d00cb1e8b4863d8ca64bea99c881edf6d16ff9ec7c23 SHA512 e194d4f9bbcecedfebd72c48d5f1e2a4185ff9d69134629b79e532af8f3fa9841e3cb99a6aae30e9bd79440c08487eeb23d6d6914690b90d1ae0952bb6168693 WHIRLPOOL bedd3de56e7625219a2970842ff0b073abbdc3488c8efece112c92f277386d5a3b63bde100a6e3daf2d5c0011e515e9fef81b888feec58d2a6571b4f898e8578
 DIST quassel-0.10.1.tar.bz2 2872973 SHA256 0d17b7d2284d9ef29ba4dad515ec84ce41a560237b3c8e7505d0ef028e95df80 SHA512 2d94b2ebf54101393356f378fd6a4fd68b24155a3ed52b7a36e47149d89d43b884a98d712c6212f4ea1bed151a9a713de63449c793f7d3e5e09e8bb595ff14f3 WHIRLPOOL 05db2c91ff4aeeccf12a68ac655efc24f4d698e4da60d36bb8580955d9b9fcc98f7e400e058cd2f42e2ad6596a214255a30250e9da8cf89881576aac83e03a6d
 DIST quassel-0.11.0.tar.bz2 2875387 SHA256 99a191b8bc2a410f7020b890ec57e0be49313f539da9f4843675bb108b0f4504 SHA512 51450559df2c0fee9a54b76a9342edb9a3b834f1f58edc556e0c1bf1f9366c846d95e7953e1b48c6ecf67ea4255b3574ed3ce537962eec222c5c03ab02852c1d WHIRLPOOL c2ffb7e052a5d412aec5d1b8bacc8cdb8144c20d62d699ca1d8972fd5e8fe6ce89da49251a02c22008061b344d9408b3f018b3b39623703b4d980c289cd5613a
-DIST quassel-0.12-beta1.tar.bz2 3626759 SHA256 9bdedea4b334d7d9a4b79acde42ed80f16a077300346a310bd7d74873d7c8599 SHA512 e56a000a56a70079e4eb3b3e16a174a06b8626ddc4d685006781d397006d5e20dc8ac41da3e2fcdef3bb243471a6b09b8e144560c7e4ab7e51cdb9ec9d414f8e WHIRLPOOL cccf1551e295ff14dd1d8461abdaf832be35a87996a55fb462e45f622d4dd8811a7bbd9cfee72f1fa29d244a00f57b7e4d87db554085f763b7290b22be0bfced
+DIST quassel-0.12-rc1.tar.bz2 3640851 SHA256 be2a982a2725dbebb5c4f908787b5173febcd2a7511f0a54ab6cf1a742a1464a SHA512 345325c69e26781864120bfb057e79e36b2bba391ee7a0cd700af432a83946939a308c7e90e50b959036fa9b583570147adfb6c804dad3819f6faf3d8a585166 WHIRLPOOL 571794d396fd047d6447b4c79f7031485785ded9592eb4ce5f0a86a7bda80e9d2464a4f94c07b5e591dcdc9386dfb0cadffa780d15eaf5a2258eaeb23110073b
 DIST quassel-0.9.2.tar.bz2 2782855 SHA256 f04d01602509c1d950602502e5f51aba47d99c73a9c70e77c563bb7749fc53c0 SHA512 81e343b9b7df7473c9d899df9ad8c4baa779545ac4fe15c3b7d47f3e9473d24aa78c8cfc1833b79ec5b4b3173e8d83e22394a50b7184f348b3f1155bb3724f3d WHIRLPOOL 0b5b45c1bb400f5e2728d5e74f35bc5ef010c029c242940b83c4e6ec3a0c0d16d0c9d9848278d075a548e4e15736f142cc99d4741b8e4901d6589b7f7e05996f
 DIST quassel-0.9.3.tar.bz2 2783132 SHA256 ec29df5c55a02f91d15fa23618b42fc82b0bb912594420cc6340a40567ea3d4d SHA512 f200c23fe0e0459dfc116dcd194184a8be28e65d8116859925c1887c6cff290316a704ca3666c0a5b65ed93e2a6a65aed890babb466fe3996bf9c0e08f988e98 WHIRLPOOL fd9b3bd2241845de69e907d2fc3d895054289c271584b07c99b3032effda44183cd2ba3f0d4b1590e93a72a3735ecca6a1d53c1ccd0a3fc32fc6dc5ec5b2281a
 EBUILD quassel-0.10.0-r1.ebuild 4990 SHA256 f3f761e93765f43cc05601ceacab2a134d9655900e3e7c977f2b5bb01f276030 SHA512 37145d3ff74eab33b54caf45aa26f7b6e042b665ad4c0719e5d982c60ef66d98f8385823ab539972b0924de68473348daf6fb28b2535301b18519b1ba63ecd49 WHIRLPOOL 4560e24f487c63e7376713a8f096c242abb1c47df38d4e6ec40945a9162904fcd46978739ea132d5507e4ed60e2d86eec4abf6d77ef2c235a690cf4f842ae03a
 EBUILD quassel-0.10.1.ebuild 4992 SHA256 745fb12a19a2411205bbedd6467650fc2eba4c88ca9e38989e4e2c49805b32d6 SHA512 10fb8dcbb1d6904921b553c42b9208e781493c98e0d352eb2767ba11048220cf7c2298d976f78d6cf64ac57e15f94dd5bb7a910d585ee8f6f8c8247c493ea2ef WHIRLPOOL d1249dcb052278fdc1bbd607d6862186a74247499be001f70d8a7ba925031ce2e9dcb75ab2352c05fa7d960d6209c6abeafc23266b1c0b8ee7b787723dddfc75
 EBUILD quassel-0.11.0.ebuild 5621 SHA256 6bc36f01160007c3411ab3b903213672f8319d893b97e6f42983a0fcb24b2def SHA512 7993183acef66aa5fb9fb117da4643e70a9fdd78344023a25d65074e662e103f4372e54975a81a92628ca6c865de511c85cbc9e7f5596fe8a424b37634be20d4 WHIRLPOOL 1b187e13784805c2af85277482a1b5dae27a7be632f67224781b609f2179f0528bd7e94d3bc5bdd0a8148349f683cfbdfe062becdee43efc16974c2a471fd295
-EBUILD quassel-0.12_beta1.ebuild 5577 SHA256 567bb0a5741f2196455a648311affa0428fa19d50e90292d2f8ba444bc2e9944 SHA512 0c18484d22df0d9265d1f38b133690831fb86aa886302da4fac8ac8d730d5789f7abda5adbefb38e2d2083b2d7f9aeed018566ee14edc31f7423eeb963e51afc WHIRLPOOL 4ced16feccc56145cbdd80f7191675d29e514cb932a6636c5014908a913542a7005f0431bcbd30deb4cdcae49329044423d8fa1ce6c36c81b553d26ccbf07d4a
+EBUILD quassel-0.12_rc1.ebuild 5950 SHA256 44af9dd081df9df168928e4663bee0b288f237c53d3e7289a76041991cf4b074 SHA512 bd42e0a191e2c961a9cd1a90c5398e28edd24bdff5b26e17b302b1bd59ad0314bf4dc5a77c10ddcaf90addf11aa00ea43e60ca70e7f2b5e34255715d88fed38e WHIRLPOOL b5a61637e3e0768d0e1bd1d047b1368b07c2e22565b81f7689d55802c4049647dd432bdf59ae4943f7ccbcdf6da3fbfd72b4ccfae4d53834a0fce698aa438d14
 EBUILD quassel-0.9.2.ebuild 5216 SHA256 47bc6b669c17f03119dbbbb19be0e60bb256c2048e9749763c6cacd0e93919ea SHA512 c6c8945a15ee6d6dbc9a4bff2d729d33c39663c067ee19a79c3e8eb8de12c982805614464b961429985610b75049e9c4e975e8207a256957aeb493cd2f033f18 WHIRLPOOL 8143fb89d51531d2704513e2fa07ac7775101c71a2591e056157bd85b3cb4f8f38ecc3149938403a3c27dd422e796c042ad89ab6669d5dbf748cbc61762fb19c
 EBUILD quassel-0.9.3.ebuild 5122 SHA256 27e9695a431a476a9a922069237c9f396586c458e16026607365dd79dcb3e545 SHA512 358540b9daa8bf5b72a8d13f107f9e35d73b0c931d9958c43f0677925d6ca194e3186dfec2a8dc0807371d37341b78df4424756c8c54dc63dd2abde59bfa30ff WHIRLPOOL 129f99548c1fa7916f67457d21848da920534dc2e63bc554b09e35b8dbd71302aafb0f90e5ebe78246106fceb919f3cf73b6dacee53aa13928721e335eefc22c
 EBUILD quassel-9999.ebuild 5949 SHA256 1be872f9e03a6ee270716857ee97c17c0fa36d990269fe44652a9570e20e8e9b SHA512 6138c310954f5ace10270296eced8b882c3191b386b99c0b21a7603d835a8655c9299d33b923befafa59bfc9abafd804eeede8c4170c3cdab8a98227176733ef WHIRLPOOL fc73c334975331bf70aebc0e981db80ee642161d6a772506aca713cbee05a15849e2b2b9bf8fa4d6a72c5874d683d4858716e5a32f0eb22d1af01506064853bd
-MISC ChangeLog 30148 SHA256 a123f9571c0bb71f1c49346859b30fde286df39f5ec7fff5795016551fc5323c SHA512 826b2077d3057f70d44055d97acf2d76f8012b08d5cd3588d2f8d662b2f4de54f75bc3d2a72893cb87f38e4e0c0190abfeb39209792fde98cc31243d232f2273 WHIRLPOOL 6ecb16bd971f836c1052be9babe569699fdd4616a159f85605597c489766b3e87a2eff84c1f14486dc1b16b384760d64c096d6a1e37a1872eeb2efafccddbceb
+MISC ChangeLog 30303 SHA256 89b06362dc14ca25abb3b0fb0956c92baeff6d4cf3ad8fce911a6008fc5480e4 SHA512 ccb5202ffd04ac239029634cea69c4327de8774bc3f2324f76312dba7bfb1226902f7869890a4868de74fadcfeb326cb803944e414f992164eecf568a74e88fc WHIRLPOOL 951fb2dfa36dd11f96ed6aa8414502301454bd55af72c256d2b75f6a43fc360caaa8d36a36dbaf7a05522cba7dd05a96a01dd608cb8fe0399e50d80ef7f1b3be
 MISC metadata.xml 1687 SHA256 20a821b954973d1f6c42184c6ca474b972896e6649ab37a44f093a7b3964e3c5 SHA512 7586fd9fa8552ae40e9294819bd56365e8e97eda8c5669519b57e8712e801c3513937effb716bd3e2cb75f47c3d180947b5a7a20107a8292f92d7c4c2837684a WHIRLPOOL 165eb876fc157171ac2d25ead567fce5ecd4d8ccab275591c0d9d18b8cb4e2f104a6a1b63c3bde76c0afdeee5651f13668ee30fe98a9bdc1b28e6f6fa2dcbc33
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU9C2TAAoJELp701BxlEWfD9EQAK2aK9FDMunyDmI0PSZlmn6W
-veFK8A+Wd/m+pzOzUh/slcY7g4Ah6+jkbkRvjNS8wnWV2YARbwTnfjLPzThWDtMU
-+JkRwPyia/ktsgAFhXPfyCMcDYAqE82cK1vxBjUBalMzLOrGgT0ddyARM/mNaJ8V
-bLINJVtXu8/isYDB/mQB+y//GURV6eJz1iSlDq72/trk4UGhakIyQondRwb8aSUU
-Y7YaHhd/Jftjj0AJqzejPhYmuiaMEt2PUUyS/QBvtf9A5AXHjeDsr5Ju5Ri/yJU+
-2DynlFiXnfRrCU2ISyyNK0aAyQgImsmto8AH6A3m4uFBki+q8zitYvWWcid48QFw
-Y8b0DbJ7+qykhDZoZ/73ulXqDJtJt2R3Ci4XTj24aKSdKqbmoxZZKCuVNnUdWf1T
-9oijrifJPo08nFc1I7tXu/0Uk6xafgQ//Ku5zddCN/za0SQ3JkooIiu/WO6Jzm8B
-Q2dg/SaTuBPPsuMPWcfTpBCGYz7iwJhfoz2VpaXYmJnmH7ccRnZjwe7R2AaL3VEG
-K/F486PStpRDgfHNFilqgaw6Rl7oxXYjUegv4uO2f+FZcgpQ665wv/qDhz9/qSPg
-nJQgKOlX+jpy4FEiAxVDewZSsdauvT8xMzDaCQg1CfT6rtx7RqOQSUzJ+RYzPqyk
-KEbnG0qqOjGK1QxR2xgM
-=grL0
+iQIcBAEBCAAGBQJVAeUZAAoJEGVpnaTzz9K90ywQAKSjljbKf/1FfkQX1KlNuBbs
+sSMYq61PCWDQgVuI3iXrrr60hXK4kJ664IUDRtkjUe5AusQ9fmhuUsX1E68PQr/A
+hR8pa+lLZnoyMM2pOsm8wgp2Q4T4tnNLwfJM0nO5sQDU3PIbW1cO3ATs2dIl60Fm
+IJS6KYd6NciAJ//j8tRMiF8WB8Y5cBou2KZIQ0q9WGqwSl2EOc8SeALliFHyOB1O
+nENIMqLsejRBic2bSjfdmD9g2WK2If2cB28Pl42O0d6K1GRQEl5WbcoAU5x1AXIG
+Qy3IDjwookncFUcb0NMjRwuKyg6hZz5r8xn/tVH2QWLMmcyiyv8s9nM3OAZGIsEj
+0d9sP6QJkrM7RE24L6cZA1AqGKQ7GECo/6Xg6yektH1NYkCKc5ctXBzXDOStAl3G
+UyV9gWdbJ6BgU0NMm4qlbydhQ7aKhgWvCl8TQ2Si/ntLUW+VIoTL/rx+riwTtVgu
+lyzyM5N2gxbDApBQ+Wv1U6vU7NwIgjCQGVQmY0MCsyEwTaZoSaIdznMQtgW5zlGe
+MBrpvSSvOwx9oujPsSwKgT2v0pLHYrAWd/xaIoW0EbDJ22URgCJ9C3q4PxqR7XjK
+0SZfNlnSgdKl2RQ6fW/JIjg9SXT19E52yPCCGpDqpzTyYlM2HSfD8vzsgmmGyzWb
+KojyYuSNpTeQtelG+3dv
+=VcCD
 -----END PGP SIGNATURE-----
